<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <android.support.v7.widget.ListViewCompat
        android:id="@+id/bt_eszk_lista"
        android:layout_width="match_parent"
        android:layout_height="100dp">
    </android.support.v7.widget.ListViewCompat>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gomb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gomb1_szoveg"
        android:textAlignment="center" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gomb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gomb2"
        android:textAlignment="center" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gomb3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gomb3_be"
        android:textAlignment="center" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gomb4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gomb4_be"
        android:textAlignment="center" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gomb5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/csatlakoz_s"
        android:textAlignment="center" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gomb6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zenet_k_ld_s"
        android:textAlignment="center" />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bejovo"
        android:layout_width="match_parent"
        android:layout_height="100dp" />
</LinearLayout>
